# microNam

./: .gitignore  CMakeLists.txt
NAM/: NAM.h  convnet.cpp  convnet.h  dsp.cpp  dsp.h  get_dsp.cpp  util.h  wavenet.cpp
example_models/: microMarshall.h
scripts/: namToHeader.py
